@@ -376,3 +376,17 @@ Description: OpenStack virtual network service - SR-IOV agent
  network capabilities, including QoS, ACLs, and network monitoring.
  .
  This package provides the Mellanox SR-IOV agent.
+
+Package: neutron-macvtap-agent
+Architecture: all
+Depends: neutron-common (= ${source:Version}),
+         ${misc:Depends},
+         ${python:Depends},
+         ${shlibs:Depends},
+Description: OpenStack virtual network service - MacVTap Agent
+ Neutron provides an API to dynamically request and configure virtual networks.
+ These networks connect "interfaces" from other OpenStack services (such as
+ vNICs from Nova VMs). The Neutron API supports extensions to provide advanced
+ network capabilities, including QoS, ACLs, and network monitoring.
+ .
+ This package provides the MacVTap Agent.
